# stonefish_ros2

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-package.yml
docs/: actuators.rst  conf.py  index.rst  install.rst  license.rst  parser.rst  robots.rst  running.rst  sensors.rst
include/stonefish_ros2/: ROS2ConsoleSimulationApp.h  ROS2GraphicalSimulationApp.h  ROS2Interface.h  ROS2ScenarioParser.h  ROS2SimulationManager.h  ROSSimulationApp.h  ROSSimulationManager.h
launch/: stonefish_simulator.launch.py  stonefish_simulator_nogpu.launch.py
msg/: BeaconInfo.msg  DVL.msg  DebugPhysics.msg  Event.msg  EventArray.msg  INS.msg  Int32Stamped.msg  ThrusterState.msg
scripts/: build-package.sh  stonefish-setup.sh
src/: parsed_simulator.cpp  stonefish_simulator.cpp  stonefish_simulator_nogpu.cpp
src/stonefish_ros2/: ROS2ConsoleSimulationApp.cpp  ROS2GraphicalSimulationApp.cpp  ROS2Interface.cpp  ROS2ScenarioParser.cpp  ROS2SimulationManager.cpp
srv/: SetJerlov.srv  SetSunParams.srv
